--- a/web/src/app/components/about/about.component.html
+++ b/web/src/app/components/about/about.component.html
@@ -1,5 +1,11 @@
-<div class="card">
-    <h2>Sideburn Whiskylaug</h2>
-    <h6></h6>
-    <p>Hvem er vi?</p>
+<div class="container-fluid">
+    <div class="row">
+        <div class="col-lg">
+            <div class="card">
+                <h2>Sideburn Whiskylaug</h2>
+                <h6></h6>
+                <p>Hvem er vi?</p>
+            </div>
+        </div>
+    </div>
 </div>
