--- a/web/src/app/components/statute/statute.component.html
+++ b/web/src/app/components/statute/statute.component.html
@@ -1,98 +1,99 @@
-<div class="row">
-    <div class="leftcolumn">
-        <div class="card">
-            <h2><strong>§1 Formål</strong></h2>
-            <p>Sideburn Whiskylaug er en whiskyklubb som skal være det naturlige kontaktpunktet mellom medlemmene
-                og evt. andre whiskyklubber og whiskyambassadører. Klubben skal være inkluderende for alle som har et
-                positivt forhold til whisky, og for medlemmer med varierende ambisjonsnivå. Sideburn Whiskylaug skal
-                fremme whiskykultur i vid forstand – også med et glimt i øyet.</p>
-            <p>Sideburn Whiskylaug vil skape merverdi for sine medlemmer ved å:</p>
-            <ul>
-                <li>Skape erfarings- og informasjonsutveksling mellom medlemmene i klubben.</li>
-                <li>Arrangere årsmøte, som selvsagt inkluderer whiskysmaking.</li>
-                <li>Formidle og tilby medlemmene ulike opplæringstilbud, samt gi råd/tips ved whiskykulturelle reiser.
-                </li>
-                <li>Fungere som et nav for innhenting av informasjon som medlemmene kan nyttiggjøre seg.</li>
-                <li>Formidle whiskyrelatert informasjon.</li>
-                <li>Tilrettelegge for whiskysmakinger og andre sosiale arrangementer.</li>
-                <li>Tilby eksklusive tapninger fra innkjøpte whiskyfat for medlemmene.</li>
-            </ul>
-            <h2 id="vedtekter-§2Navn"><strong>§2 Navn</strong></h2>
-            <p>Det offisielle navnet er Sideburn Whiskylaug (SWL). På engelsk benyttes Sideburn Whisky Guild (SWG).
-                Domenenavn på Internett er <a href="http://sideburnwhisky.no/"
-                    rel="nofollow"><em>sideburnwhisky.no</em></a>.</p>
-            <h2 id="vedtekter-§3Virksomhet"><strong>§3 Virksomhet</strong></h2>
-            <p>Sideburn Whiskylaug skal drive virksomheten primært gjennom hjemmesiden, på Facebook, sosiale
-                arrangementer og det årlige årsmøtet.
-                Virksomheten skal drives med så lite byråkrati som mulig, og driften skal være kostnadseffektiv.</p>
-            <p>Sideburn Whiskylaugs sete er hos styrets leder.</p>
-            <h2 id="vedtekter-§4Medlemmer"><strong>§4 Medlemmer</strong></h2>
-            <p>Medlemmer er alle whiskyinteresserte enkeltpersoner som har betalt årsavgift til Sideburn Whiskylaug.
-                Hvert betalende medlem har én stemme.</p>
-            <p>Medlemmene har rett til å ta del i den aktivitet som utøves av og på vegne av klubben</p>
-            <p>Medlemskap fordrer at kriterier er oppfylt. Styret godkjenner medlemskap.</p>
-            <p>Kriterier for medlemskap i Sideburn Whiskylaug:</p>
-            <ul>
-                <li>Kjenner minst ett av medlemmene i klubben.</li>
-                <li>Et positivt forhold til whisky.</li>
-                <li>Betalt årsavgift til Sideburn Whiskylaug.</li>
-                <li>Man skal ikke plage andre, man skal være grei og snill, og forøvrig kan man gjøre som man vil.</li>
-            </ul>
-            <h2 id="vedtekter-§5Årsmøte"><strong>§5 Årsmøte</strong></h2>
-            <p>Årsmøtet skal avholdes en gang per år, gjerne i forbindelse med en whiskysmaking. Innkalling skal sendes
-                ut
-                minst 30 dager før årsmøtet. Styret kan innkalle til ekstraordinært årsmøte. Innkomne saker som skal
-                behandles av årsmøte må være styret i hende senest 14 dager før den varslede avholdelsen av årsmøte.</p>
-            <p>På årsmøtet skal følgende saker behandles:</p>
-            <ol>
-                <li>Godkjenning av innkalling, saksliste og de fremmøtte</li>
-                <li>Valg av dirigent og sekretær</li>
-                <li>Årsmelding</li>
-                <li>Årsregnskap</li>
-                <li>Behandling av innkomne forslag og saker</li>
-                <li>Fastsette årskontingenten</li>
-                <li>Valg i henhold til §6</li>
-                <li>Konsum av minst ett glass whisky av god kvalitet</li>
-            </ol>
-            <p>Dersom et medlem ikke har anledning til å møte på årsmøtet, kan vedkommende ved skriftlig
-                fullmakt, delegere sin stemme til et annet gyldig medlem (§6) i samme klubb.</p>
-            <h2 id="vedtekter-§6Styret"><strong>§6 Styret</strong></h2>
-            <p>Sideburn Whiskylaugs styre skal bestå av minst tre og maksimalt fem personer og er beslutningsdyktig
-                når minst tre medlemmer er tilstede. Det skal tilstrebes at begge kjønn er representert i styret som
-                selv velger leder, nestleder, sekretær og kasserer. Hvert styremedlem velges for to år. For å skape
-                kontinuitet i styrets arbeid, er halve styret på valg hvert år.</p>
-            <h2 id="vedtekter-§7Valgkomitéogvalg"><strong>§7 Valgkomité og valg</strong></h2>
-            <p>Valgkomiteen består av den/de personen(e) som sist gikk ut av styret. Ved gjenvalg av samme styre,
-                gjenvelges også samme valgkomité.</p>
-            <p>Valgkomiteens innstilling til nye styremedlemmer skal foreligge minst to uker før årsmøtet.<strong>
-                </strong></p>
-            <h2 id="vedtekter-§8Eksklusjon"><strong>§8 Eksklusjon</strong></h2>
-            <p>Dersom et medlem ikke lenger oppfyller kriteriene i §4 kan styret beslutte å ekskludere vedkommende
-                medlem.</p>
-            <h2 id="vedtekter-§9Mistillit"><strong>§9 Mistillit</strong></h2>
-            <p>Å fremme mistillit i forhold til tillitsvalgte tilligger årsmøtet. Vedtak fattes ved 2/3 kvalifisert
-                flertall.</p>
-            <h2 id="vedtekter-§10Opphør"><strong>§10 Opphør</strong></h2>
-            <p>Opphør av klubben kan besluttes av årsmøtet med 2/3 flertall. Dersom Sideburn Whiskylaug velger å
-                avslutte sin virksomhet skal eiendeler fordeles blant medlemmene.</p>
-            <h2 id="vedtekter-§11Endringavvedtekter"><strong>§11 Endring av vedtekter</strong></h2>
-            <p>Endring av disse vedtektene fordrer 2/3 flertall på årsmøtet. Forslag til vedtektsendring må stå på
-                dagsorden og være kunngjort for Sideburn Whiskylaugs medlemmer minst to uker for årsmøtet.</p>
-            <p>Vedtatt 2021-11-05. Oppdatert 2021-11-05</p>
+<div class="container-fluid">
+    <div class="row">
+        <div class="col-lg">
+            <div class="card">
+                <h2><strong>§1 Formål</strong></h2>
+                <p>Sideburn Whiskylaug er en whiskyklubb som skal være det naturlige kontaktpunktet mellom medlemmene
+                    og evt. andre whiskyklubber og whiskyambassadører. Klubben skal være inkluderende for alle som har et
+                    positivt forhold til whisky, og for medlemmer med varierende ambisjonsnivå. Sideburn Whiskylaug skal
+                    fremme whiskykultur i vid forstand – også med et glimt i øyet.</p>
+                <p>Sideburn Whiskylaug vil skape merverdi for sine medlemmer ved å:</p>
+                <ul>
+                    <li>Skape erfarings- og informasjonsutveksling mellom medlemmene i klubben.</li>
+                    <li>Arrangere årsmøte, som selvsagt inkluderer whiskysmaking.</li>
+                    <li>Formidle og tilby medlemmene ulike opplæringstilbud, samt gi råd/tips ved whiskykulturelle reiser.
+                    </li>
+                    <li>Fungere som et nav for innhenting av informasjon som medlemmene kan nyttiggjøre seg.</li>
+                    <li>Formidle whiskyrelatert informasjon.</li>
+                    <li>Tilrettelegge for whiskysmakinger og andre sosiale arrangementer.</li>
+                    <li>Tilby eksklusive tapninger fra innkjøpte whiskyfat for medlemmene.</li>
+                </ul>
+                <h2 id="vedtekter-§2Navn"><strong>§2 Navn</strong></h2>
+                <p>Det offisielle navnet er Sideburn Whiskylaug (SWL). På engelsk benyttes Sideburn Whisky Guild (SWG).
+                    Domenenavn på Internett er <a href="http://sideburnwhisky.no/" rel="nofollow"><em>sideburnwhisky.no</em></a>.</p>
+                <h2 id="vedtekter-§3Virksomhet"><strong>§3 Virksomhet</strong></h2>
+                <p>Sideburn Whiskylaug skal drive virksomheten primært gjennom hjemmesiden, på Facebook, sosiale
+                    arrangementer og det årlige årsmøtet.
+                    Virksomheten skal drives med så lite byråkrati som mulig, og driften skal være kostnadseffektiv.</p>
+                <p>Sideburn Whiskylaugs sete er hos styrets leder.</p>
+                <h2 id="vedtekter-§4Medlemmer"><strong>§4 Medlemmer</strong></h2>
+                <p>Medlemmer er alle whiskyinteresserte enkeltpersoner som har betalt årsavgift til Sideburn Whiskylaug.
+                    Hvert betalende medlem har én stemme.</p>
+                <p>Medlemmene har rett til å ta del i den aktivitet som utøves av og på vegne av klubben</p>
+                <p>Medlemskap fordrer at kriterier er oppfylt. Styret godkjenner medlemskap.</p>
+                <p>Kriterier for medlemskap i Sideburn Whiskylaug:</p>
+                <ul>
+                    <li>Kjenner minst ett av medlemmene i klubben.</li>
+                    <li>Et positivt forhold til whisky.</li>
+                    <li>Betalt årsavgift til Sideburn Whiskylaug.</li>
+                    <li>Man skal ikke plage andre, man skal være grei og snill, og forøvrig kan man gjøre som man vil.</li>
+                </ul>
+                <h2 id="vedtekter-§5Årsmøte"><strong>§5 Årsmøte</strong></h2>
+                <p>Årsmøtet skal avholdes en gang per år, gjerne i forbindelse med en whiskysmaking. Innkalling skal sendes
+                    ut
+                    minst 30 dager før årsmøtet. Styret kan innkalle til ekstraordinært årsmøte. Innkomne saker som skal
+                    behandles av årsmøte må være styret i hende senest 14 dager før den varslede avholdelsen av årsmøte.</p>
+                <p>På årsmøtet skal følgende saker behandles:</p>
+                <ol>
+                    <li>Godkjenning av innkalling, saksliste og de fremmøtte</li>
+                    <li>Valg av dirigent og sekretær</li>
+                    <li>Årsmelding</li>
+                    <li>Årsregnskap</li>
+                    <li>Behandling av innkomne forslag og saker</li>
+                    <li>Fastsette årskontingenten</li>
+                    <li>Valg i henhold til §6</li>
+                    <li>Konsum av minst ett glass whisky av god kvalitet</li>
+                </ol>
+                <p>Dersom et medlem ikke har anledning til å møte på årsmøtet, kan vedkommende ved skriftlig
+                    fullmakt, delegere sin stemme til et annet gyldig medlem (§6) i samme klubb.</p>
+                <h2 id="vedtekter-§6Styret"><strong>§6 Styret</strong></h2>
+                <p>Sideburn Whiskylaugs styre skal bestå av minst tre og maksimalt fem personer og er beslutningsdyktig
+                    når minst tre medlemmer er tilstede. Det skal tilstrebes at begge kjønn er representert i styret som
+                    selv velger leder, nestleder, sekretær og kasserer. Hvert styremedlem velges for to år. For å skape
+                    kontinuitet i styrets arbeid, er halve styret på valg hvert år.</p>
+                <h2 id="vedtekter-§7Valgkomitéogvalg"><strong>§7 Valgkomité og valg</strong></h2>
+                <p>Valgkomiteen består av den/de personen(e) som sist gikk ut av styret. Ved gjenvalg av samme styre,
+                    gjenvelges også samme valgkomité.</p>
+                <p>Valgkomiteens innstilling til nye styremedlemmer skal foreligge minst to uker før årsmøtet.<strong>
+                    </strong></p>
+                <h2 id="vedtekter-§8Eksklusjon"><strong>§8 Eksklusjon</strong></h2>
+                <p>Dersom et medlem ikke lenger oppfyller kriteriene i §4 kan styret beslutte å ekskludere vedkommende
+                    medlem.</p>
+                <h2 id="vedtekter-§9Mistillit"><strong>§9 Mistillit</strong></h2>
+                <p>Å fremme mistillit i forhold til tillitsvalgte tilligger årsmøtet. Vedtak fattes ved 2/3 kvalifisert
+                    flertall.</p>
+                <h2 id="vedtekter-§10Opphør"><strong>§10 Opphør</strong></h2>
+                <p>Opphør av klubben kan besluttes av årsmøtet med 2/3 flertall. Dersom Sideburn Whiskylaug velger å
+                    avslutte sin virksomhet skal eiendeler fordeles blant medlemmene.</p>
+                <h2 id="vedtekter-§11Endringavvedtekter"><strong>§11 Endring av vedtekter</strong></h2>
+                <p>Endring av disse vedtektene fordrer 2/3 flertall på årsmøtet. Forslag til vedtektsendring må stå på
+                    dagsorden og være kunngjort for Sideburn Whiskylaugs medlemmer minst to uker for årsmøtet.</p>
+                <p>Vedtatt 2021-11-05. Oppdatert 2021-11-05</p>
+            </div>
         </div>
-    </div>
-    <div class="rightcolumn">
-        <div class="card">
-            <h2>Søk</h2>
-            <input type="text" />
-        </div>
-        <div class="card">
-            <h3>Populære nyheter</h3>
-            <p>...</p>
-        </div>
-        <div class="card">
-            <h3>Følg oss</h3>
-            <p>...</p>
+        <div class="col-lg-3">
+            <div class="card">
+                <h2>Søk</h2>
+                <input type="text" />
+            </div>
+            <div class="card">
+                <h3>Populære nyheter</h3>
+                <p>...</p>
+            </div>
+            <div class="card">
+                <h3>Følg oss</h3>
+                <p>...</p>
+            </div>
         </div>
     </div>
 </div>
