--- a/web/src/app/components/article-editor/article-editor.component.html
+++ b/web/src/app/components/article-editor/article-editor.component.html
@@ -1,84 +1,88 @@
-<div class="card" *ngIf="auth.isArticleWriter">
-    <div *ngIf="!articleReady">
-        <button type="button" (click)="newArticle()" class="btn btn-success mt-3 mb-3">Ny artikkel</button>
-    </div>
-    <ul ngbNav #nav="ngbNav" [(activeId)]="activeTab" (navChange)="onNavChange($event)" class="nav nav-tabs">
-        <li [ngbNavItem]="0" *ngIf="articleReady">
-            <a ngbNavLink>Redigering</a>
-            <ng-template ngbNavContent>
-                <form [formGroup]="form" (ngSubmit)="onSubmit()">
-                    <div class="group">
-                        <div class="leftcolumn">
-                            <label for="articleTitle">Tittel: </label>
-                            <input id="articleTitle" type="text" [formControl]="formModel.title" />
-                            <label for="articleSubject">Ingress: </label>
-                            <textarea id="articleSubject" class="text-editor-ingress" [formControl]="formModel.subject"></textarea>
-                        </div>
-                        <div class="rightcolumn" style="text-align: center; display: block;">
-                            <img [src]="imageUrl" class="article-image-small" />
-                            <label class="btn btn-default p-0" style="width: 100%;">
-                                <input id="imageUploader" type="file" accept="image/*" (change)="selectFiles($event)" style="width: 100%;" />
-                            </label>
-                            <button class="btn btn-success btn-sm" [disabled]="!selectedFiles" (click)="uploadFiles()" style="width: 100%;">
-                                Upload
-                            </button>
-                            <div *ngFor="let progressInfo of progressInfos" class="mb-2">
-                                <span>{{ progressInfo.fileName }}</span>
-                                <div class="progress">
-                                    <div class="progress-bar progress-bar-info progress-bar-striped" role="progressbar" attr.aria-valuenow="{{ progressInfo.value }}"
-                                        aria-valuemin="0" aria-valuemax="100" [ngStyle]="{ width: progressInfo.value + '%' }">
-                                        {{ progressInfo.value }}%
+<div class="container-fluid">
+    <div class="col">
+        <div class="card" *ngIf="auth.isArticleWriter">
+            <div *ngIf="!articleReady">
+                <button type="button" (click)="newArticle()" class="btn btn-success mt-3 mb-3">Ny artikkel</button>
+            </div>
+            <ul ngbNav #nav="ngbNav" [(activeId)]="activeTab" (navChange)="onNavChange($event)" class="nav nav-tabs">
+                <li [ngbNavItem]="0" *ngIf="articleReady">
+                    <a ngbNavLink>Redigering</a>
+                    <ng-template ngbNavContent>
+                        <form [formGroup]="form" (ngSubmit)="onSubmit()">
+                            <div class="group">
+                                <div class="leftcolumn">
+                                    <label for="articleTitle">Tittel: </label>
+                                    <input id="articleTitle" type="text" [formControl]="formModel.title" />
+                                    <label for="articleSubject">Ingress: </label>
+                                    <textarea id="articleSubject" class="text-editor-ingress" [formControl]="formModel.subject"></textarea>
+                                </div>
+                                <div class="rightcolumn" style="text-align: center; display: block;">
+                                    <img [src]="imageUrl" class="article-image-small" />
+                                    <label class="btn btn-default p-0" style="width: 100%;">
+                                        <input id="imageUploader" type="file" accept="image/*" (change)="selectFiles($event)" style="width: 100%;" />
+                                    </label>
+                                    <button class="btn btn-success btn-sm" [disabled]="!selectedFiles" (click)="uploadFiles()" style="width: 100%;">
+                                        Upload
+                                    </button>
+                                    <div *ngFor="let progressInfo of progressInfos" class="mb-2">
+                                        <span>{{ progressInfo.fileName }}</span>
+                                        <div class="progress">
+                                            <div class="progress-bar progress-bar-info progress-bar-striped" role="progressbar" attr.aria-valuenow="{{ progressInfo.value }}"
+                                                aria-valuemin="0" aria-valuemax="100" [ngStyle]="{ width: progressInfo.value + '%' }">
+                                                {{ progressInfo.value }}%
+                                            </div>
+                                        </div>
                                     </div>
                                 </div>
                             </div>
+                            <div class="row">
+                                <div class="col align-bottom">
+                                    <label for="articleBody" style="display: inline-block;">Artikkeltekst: </label>
+                                </div>
+                                <div class="col align-bottom text-right">
+                                    <label for="articleBody" style="display: inline-block;">Hjelp til tekstformattering: <a href="https://www.markdownguide.org/basic-syntax/"
+                                            target="_blank">Markdown manual</a>
+                                    </label>
+                                </div>
+                            </div>
+                            <textarea id="articleBody" class="text-editor-body" [formControl]="formModel.body"></textarea>
+                        </form>
+                    </ng-template>
+                </li>
+                <li [ngbNavItem]="1" *ngIf="articleReady">
+                    <a ngbNavLink>Forhåndsvisning</a>
+                    <ng-template ngbNavContent>
+                        <h2>{{ f.title.value }}</h2>
+                        <h6>{{ f.subject.value }}</h6>
+                        <div class="meta">
+                            <time class="date dt-published" datetime="2021-10-14T05:15:00+00:00" itemprop="datePublished">
+                                <mat-icon aria-hidden="false" aria-label="Publisert">edit_calendar</mat-icon> 14 oktober 2021
+                            </time>
+                            <span class="tags">
+                                <mat-icon aria-hidden="false" aria-label="Kategorier">sell</mat-icon>
+                                <a href="/tags/#web">web</a>
+                            </span>
                         </div>
-                    </div>
-                    <div class="row">
-                        <div class="col align-bottom">
-                            <label for="articleBody" style="display: inline-block;">Artikkeltekst: </label>
+                        <div class="card-content">
+                            <img [src]="imageUrl" class="article-image" *ngIf="hasImage" />
+                            <div [innerHtml]="compiledBodyMarkdown"></div>
                         </div>
-                        <div class="col align-bottom text-right">
-                            <label for="articleBody" style="display: inline-block;">Hjelp til tekstformattering: <a href="https://www.markdownguide.org/basic-syntax/"
-                                    target="_blank">Markdown manual</a>
-                            </label>
-                        </div>
-                    </div>
-                    <textarea id="articleBody" class="text-editor-body" [formControl]="formModel.body"></textarea>
-                </form>
-            </ng-template>
-        </li>
-        <li [ngbNavItem]="1" *ngIf="articleReady">
-            <a ngbNavLink>Forhåndsvisning</a>
-            <ng-template ngbNavContent>
-                <h2>{{ f.title.value }}</h2>
-                <h6>{{ f.subject.value }}</h6>
-                <div class="meta">
-                    <time class="date dt-published" datetime="2021-10-14T05:15:00+00:00" itemprop="datePublished">
-                        <mat-icon aria-hidden="false" aria-label="Publisert">edit_calendar</mat-icon> 14 oktober 2021
-                    </time>
-                    <span class="tags">
-                        <mat-icon aria-hidden="false" aria-label="Kategorier">sell</mat-icon>
-                        <a href="/tags/#web">web</a>
-                    </span>
+                    </ng-template>
+                </li>
+            </ul>
+            <div [ngbNavOutlet]="nav"></div>
+            <div class="row row-cols-2 py-4">
+                <div class="col text-left">
+                    <button *ngIf="auth.isArticleWriter" class="btn btn-success btn-md w-50" [disabled]="!canSaveArticle" (click)="saveArticle()">
+                        Lagre endringer
+                    </button>
                 </div>
-                <div class="card-content">
-                    <img [src]="imageUrl" class="article-image" *ngIf="hasImage" />
-                    <div [innerHtml]="compiledBodyMarkdown"></div>
+                <div class="col text-right">
+                    <button *ngIf="auth.isArticlePublisher" class="btn btn-warning btn-md w-50" [disabled]="!canPublishArticle" (click)="publishArticle()">
+                        Publisere artikkel
+                    </button>
                 </div>
-            </ng-template>
-        </li>
-    </ul>
-    <div [ngbNavOutlet]="nav"></div>
-    <div class="row row-cols-2 py-4">
-        <div class="col text-left">
-            <button *ngIf="auth.isArticleWriter" class="btn btn-success btn-md w-50" [disabled]="!canSaveArticle" (click)="saveArticle()">
-                Lagre endringer
-            </button>
-        </div>
-        <div class="col text-right">
-            <button *ngIf="auth.isArticlePublisher" class="btn btn-warning btn-md w-50" [disabled]="!canPublishArticle" (click)="publishArticle()">
-                Publisere artikkel
-            </button>
+            </div>
         </div>
     </div>
 </div>
