Working with publishing functions

--- a/web/src/app/components/confirm-modal/confirm-modal.component.scss
+++ b/web/src/app/components/confirm-modal/confirm-modal.component.scss
@@ -1,9 +1,9 @@
 .dark-modal .modal-content {
     background-color: #292b2c;
-    color: white;
+    color: rgb(153, 149, 149);
   }
   .dark-modal .close {
-    color: white;
+    color: rgb(148, 144, 144);
   }
   .light-blue-backdrop {
     background-color: #5cb3fd;
