--- a/web/src/app/components/article-viewer/article-viewer.component.html
+++ b/web/src/app/components/article-viewer/article-viewer.component.html
@@ -1,1 +1,47 @@
-<p>article-viewer works!</p>
+<div class="container-fluid">
+    <div class="row">
+        <div class="col-lg">
+            <div class="card">
+                <div class="container-fluid">
+                    <div class="row">
+                        <div class="col pl-0">
+                            <h2>{{article?.title}}</h2>
+                        </div>
+                        <div class="col-1 align-middle">
+                            <div *ngIf="auth.hasAccessArticleEdit(article)">
+                                <a class="float-right mt-1" routerLink="/artikkelredigering/{{article?._id}}">
+                                    <mat-icon aria-hidden="false" aria-label="Publisert">edit</mat-icon>
+                                </a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <h6>{{article?.subject}}</h6>
+                <div class="meta">
+                    <time class="date dt-published" datetime="2021-10-14T05:15:00+00:00" itemprop="datePublished">
+                        <mat-icon aria-hidden="false" aria-label="Publisert">edit_calendar</mat-icon> 14 oktober 2025
+                    </time>
+                    <span class="tags">
+                        <mat-icon aria-hidden="false" aria-label="Kategorier">sell</mat-icon>
+                        <a href="/tags/#web">web</a>
+                    </span>
+                </div>
+                <div class="card-content">
+                    <img src="../assets/images/work-in-progress.jpg" class="article-image float-none float-md-left" />
+                    <p>{{article?.body}}</p>
+                </div>
+            </div>
+        </div>
+        <div class="col-lg-3">
+            <app-article-tool-box></app-article-tool-box>
+            <div class="card">
+                <div class="card-header">Søk</div>
+                <input type="text" />
+            </div>
+            <div class="card">
+                <div class="card-header">Populære nyheter</div>
+                <p>...</p>
+            </div>
+        </div>
+    </div>
+</div>
