--- a/web/src/app/app.component.html
+++ b/web/src/app/app.component.html
@@ -1,10 +1,13 @@
 <div class="header">
   <div class="banner-small d-md-none"><img class="image-small" src="../assets/images/logo-shadow.png" /></div>
-  <div class="banner-med d-none d-md-block d-lg-none"><img class="image-med" src="../assets/images/logo-shadow.png"/></div>
-  <div class="banner-large d-none d-lg-block"><img class="image-large" src="../assets/images/logo-shadow.png"/></div>
+  <div class="banner-med d-none d-md-block d-lg-none"><img class="image-med" src="../assets/images/logo-shadow.png" /></div>
+  <div class="banner-large d-none d-lg-block"><img class="image-large" src="../assets/images/logo-shadow.png" /></div>
   <app-nav-bar></app-nav-bar>
 </div>
 <div class="content">
+  <ngb-alert #alertSuccess class="m-3" *ngIf="auth.successMessage" type="success" (closed)="auth.successMessage = ''">{{ auth.successMessage }}</ngb-alert>
+  <ngb-alert #alertWarning class="m-3" *ngIf="auth.warningMessage" type="warning" (closed)="auth.warningMessage = ''">{{ auth.warningMessage }}</ngb-alert>
+  <ngb-alert #alertError class="m-3" *ngIf="auth.errorMessage" type="danger" (closed)="auth.errorMessage = ''">{{ auth.errorMessage }}</ngb-alert>
   <router-outlet></router-outlet>
 </div>
 <div class="footer">
