--- a/web/src/app/components/article-tool-box/article-tool-box.component.html
+++ b/web/src/app/components/article-tool-box/article-tool-box.component.html
@@ -4,20 +4,20 @@
     <hr>
     <h5>Upubliserte artikler</h5>
     <div *ngFor="let article of articles" class="card">
-        <div class="content">
+        <div class="container-fluid p-0">
             <div class="row">
                 <div class="col">{{ article.doc.title }}</div>
             </div>
             <div class="row">
-                <div class="col">{{ article.doc.author }}</div>
+                <div class="col"><small><em>{{ article.doc.author }}</em></small></div>
             </div>
-            <div class="row">
-                <div class="col">
+            <div class="row mt-2">
+                <div class="col align-bottom">
                     <a routerLink="/artikkelredigering/{{article.id}}">
                         <mat-icon aria-hidden="false" aria-label="Publisert">edit</mat-icon>
                     </a>
                 </div>
-                <div class="col align-right">
+                <div class="col text-right align-bottom">
                     <mat-icon aria-hidden="false" class="icon-delete" aria-label="Publisert" (click)="deleteArticle(article.doc)">delete</mat-icon>
                 </div>
             </div>
