--- a/web/src/app/components/home/home.component.html
+++ b/web/src/app/components/home/home.component.html
@@ -1,25 +1,6 @@
 <div class="container-fluid">
     <div class="row">
         <div class="col-lg">
-            <!-- <div class="card">
-                <h2>Kommer snart</h2>
-                <h6>Vi jobber på "spreng" med å ferdigstille sidene.</h6>
-                <div class="meta">
-                    <time class="date dt-published" datetime="2021-10-14T05:15:00+00:00" itemprop="datePublished">
-                        <mat-icon aria-hidden="false" aria-label="Publisert">edit_calendar</mat-icon> 14 oktober 2021
-                    </time>
-                    <span class="tags">
-                        <mat-icon aria-hidden="false" aria-label="Kategorier">sell</mat-icon>
-                        <a href="/tags/#web">web</a>
-                    </span>
-                </div>
-                <div class="card-content">
-                    <img src="../assets/images/work-in-progress.jpg" class="article-image float-none float-md-left" />
-                    <p>Vi er snart klare med litt mer innhold. Denne siden er tilgjengelig for å gi medlemmene en liten
-                        smakebit på
-                        hvordan det vil se ut. Vi tar gjerne imot tilbakemeldinger og endringsforlag.</p>
-                </div>
-            </div> -->
             <div *ngFor="let article of articles" class="card">
                 <div class="container-fluid">
                     <div class="row">
@@ -38,7 +19,7 @@
                 <h6>{{article.doc.subject}}</h6>
                 <div class="meta">
                     <time class="date dt-published" datetime="2021-10-14T05:15:00+00:00" itemprop="datePublished">
-                        <mat-icon aria-hidden="false" aria-label="Publisert">edit_calendar</mat-icon> 14 oktober 2025
+                        <mat-icon aria-hidden="false" aria-label="Publisert">edit_calendar</mat-icon> 14 oktober 2021
                     </time>
                     <span class="tags">
                         <mat-icon aria-hidden="false" aria-label="Kategorier">sell</mat-icon>
@@ -47,7 +28,7 @@
                 </div>
                 <div class="card-content">
                     <img src="../assets/images/work-in-progress.jpg" class="article-image float-none float-md-left" />
-                    <p>{{article.doc.body}}</p>
+                    <p [innerHTML]="compileMarkdown(article.doc.body)"></p>
                 </div>
             </div>
         </div>
